sample/python-tool-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: python-tool
spec: {}
status: {}
