sample/httpd-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: httpd-dev203
  name: httpd-dev203
  namespace: python-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-dev203
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd-dev203
    spec:
      containers:
      - image: httpd:2.4-alpine
        name: httpd
        resources: {}
status: {}
