sample/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-test
  name: nginx-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-test
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
