sample/httpd-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: httpd-test-service
  name: httpd-test-service
  namespace: python-tool
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd-dev201
  type: NodePort
status:
  loadBalancer: {}
