sample/nginx-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-test-service
  name: nginx-test-service
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-test
  type: ClusterIP
status:
  loadBalancer: {}
