sample/nginx-test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx-test-ingress.k3s.mac.domain
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-test-service
          servicePort: 80
